--- a/notebooks/Step2-Convert-model.ipynb
+++ b/notebooks/Step2-Convert-model.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The compiled model is saved in the `build` directory:"
+    "The compiled models are saved in the `build` directory. The path for each model includes a final sub-directory named `1`, which refers to the model version."
    ]
   },
   {
@@ -114,13 +114,6 @@
     "        options=None,\n",
     "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
