--- a/notebooks/Step3-Build-model-config-protobuf.ipynb
+++ b/notebooks/Step3-Build-model-config-protobuf.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Launch TensorFlow Serving"
+    "# Prepare to launch TensorFlow Serving"
    ]
   },
   {
@@ -48,16 +48,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model_server.model_server_config import TensorFlowServingModelConfig"
+    "from tfserving_manager.model_server_config import TFServingModelServerConfig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TensorFlow Serving requires a special model config file in the protobuf message format. This file can be generated using the below functions. In the example below, the base path for the model is specified according to what it would be inside the Docker container where we will run TensorFlow Serving. Note, that the model base path does not include the model version sub-directory, as the model version can be specified inside the model config file. If no version is specified, the latest model is used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_file = TensorFlowServingModelConfig()\n",
+    "config_file = TFServingModelServerConfig()\n",
     "config_file.initialise_blank_config()\n",
     "\n",
     "for model in models:\n",
