--- a/notebooks/Step4-Benchmarking-Server.ipynb
+++ b/notebooks/Step4-Benchmarking-Server.ipynb
@@ -60,6 +60,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model config file for TensorFlow Serving can be configured on the fly to load and unload models where necessary."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 153,
    "metadata": {},
@@ -72,6 +79,13 @@
     "model_config.add_model(model_name=\"B04A8\", base_path=\"/models/B04A8/\")\n",
     "model_config.save_protobuf(\"../models/build/model_config.proto\")\n",
     "model_management.replace_server_config(model_config.to_proto())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Separate classes are available to interact with the server via either the RESTful API or the gRPC API."
    ]
   },
   {
